--- a/example_presentation.Rmd
+++ b/example_presentation.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Example Presentation"
 author: "Moutusi and Matt"
-affiliation: "Milken Institute Center for Financial Markets"
+affiliation: 
 date: "06/02/2015"
 output: ioslides_presentation
 runtime: shiny
